add data structure to docs

--- a/process_mining.ipynb
+++ b/process_mining.ipynb
@@ -17,7 +17,13 @@
    "metadata": {},
    "source": [
     "Use the 'pm4py' library to create a process mining model of a demo log.\n",
-    "The goal is to be able to identify issues in the SOC Toolkit logs with process mining."
+    "The goal is to be able to identify issues in the SOC Toolkit logs with process mining.\n",
+    "\n",
+    "## Features\n",
+    "  * case id   --> 'case:concept:name'\n",
+    "  * timestamp --> 'timestamp'\n",
+    "  * activity  --> 'concept:name'\n",
+    "  * resource  --> 'org:resource'"
    ]
   },
   {
@@ -34,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -57,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -80,10 +86,23 @@
     "        log_csv = pd.read_csv(_csv_file_name, sep=',')\n",
     "        log_csv = dataframe_utils.convert_timestamp_columns_in_df(log_csv)\n",
     "        log_csv = log_csv.sort_values('timestamp')\n",
-    "        parameters = {log_converter.Variants.TO_EVENT_LOG.value.Parameters.CASE_ID_KEY: 'case'}\n",
-    "        self._event_log = log_converter.apply(log_csv, parameters=parameters,\n",
-    "                                        variant=log_converter.Variants.TO_EVENT_LOG)\n",
-    "        xes_exporter.apply(self._event_log, _xes_file_name)\n"
+    "        self._event_log = log_converter.apply(log_csv, variant=log_converter.Variants.TO_EVENT_LOG)\n",
+    "        xes_exporter.apply(self._event_log, _xes_file_name)\n",
+    "        \n",
+    "    def alpha_miner(self) -> None:\n",
+    "        pass\n",
+    "    \n",
+    "    def generate_petri_net(self) -> None:\n",
+    "        pass\n",
+    "    \n",
+    "    def directly_follows_graph(self) -> None:\n",
+    "        pass\n",
+    "    \n",
+    "    def process_replay(self) -> None:\n",
+    "        pass\n",
+    "    \n",
+    "    def print_diagnostics(self) -> None:\n",
+    "        pass\n"
    ]
   },
   {
@@ -95,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -105,7 +124,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b6c3d4706e7048a99a153cda1e108d55",
+       "model_id": "4af3eb60395149138e77b9fc1063d88b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -120,7 +139,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'attributes': {'concept:name': 54}, 'events': [{'case': 54, 'timestamp': Timestamp('2021-01-12 17:18:00.431256+0000', tz='UTC'), 'activity': 'executed pre function of component auth_proxy'}, '..', {'case': 54, 'timestamp': Timestamp('2021-01-12 17:18:05.031256+0000', tz='UTC'), 'activity': 'executed post function of component guardia_api'}]}, {'attributes': {'concept:name': 76}, 'events': [{'case': 76, 'timestamp': Timestamp('2021-01-12 17:18:00.626463+0000', tz='UTC'), 'activity': 'executed pre function of component auth_proxy'}, '..', {'case': 76, 'timestamp': Timestamp('2021-01-12 17:18:10.126463+0000', tz='UTC'), 'activity': 'executed post function of component guardia_api'}]}, {'attributes': {'concept:name': 106}, 'events': [{'case': 106, 'timestamp': Timestamp('2021-01-12 17:18:00.692066+0000', tz='UTC'), 'activity': 'executed pre function of component auth_proxy'}, '..', {'case': 106, 'timestamp': Timestamp('2021-01-12 17:18:08.992066+0000', tz='UTC'), 'activity': 'executed post function of component guardia_api'}]}, {'attributes': {'concept:name': 97}, 'events': [{'case': 97, 'timestamp': Timestamp('2021-01-12 17:18:00.720196+0000', tz='UTC'), 'activity': 'executed pre function of component auth_proxy'}, '..', {'case': 97, 'timestamp': Timestamp('2021-01-12 17:18:12.520196+0000', tz='UTC'), 'activity': 'executed post function of component guardia_api'}]}, {'attributes': {'concept:name': 92}, 'events': [{'case': 92, 'timestamp': Timestamp('2021-01-12 17:18:00.722651+0000', tz='UTC'), 'activity': 'executed pre function of component auth_proxy'}, '..', {'case': 92, 'timestamp': Timestamp('2021-01-12 17:18:04.622651+0000', tz='UTC'), 'activity': 'executed post function of component guardia_api'}]}]\n"
+      "[{'attributes': {'concept:name': 54}, 'events': [{'timestamp': Timestamp('2021-01-12 17:18:00.431256+0000', tz='UTC'), 'concept:name': 'executed pre function of component auth_proxy', 'org:resource': 'auth_proxy'}, '..', {'timestamp': Timestamp('2021-01-12 17:18:05.031256+0000', tz='UTC'), 'concept:name': 'executed post function of component guardia_api', 'org:resource': 'guardia_api'}]}, {'attributes': {'concept:name': 76}, 'events': [{'timestamp': Timestamp('2021-01-12 17:18:00.626463+0000', tz='UTC'), 'concept:name': 'executed pre function of component auth_proxy', 'org:resource': 'auth_proxy'}, '..', {'timestamp': Timestamp('2021-01-12 17:18:10.126463+0000', tz='UTC'), 'concept:name': 'executed post function of component guardia_api', 'org:resource': 'guardia_api'}]}, {'attributes': {'concept:name': 106}, 'events': [{'timestamp': Timestamp('2021-01-12 17:18:00.692066+0000', tz='UTC'), 'concept:name': 'executed pre function of component auth_proxy', 'org:resource': 'auth_proxy'}, '..', {'timestamp': Timestamp('2021-01-12 17:18:08.992066+0000', tz='UTC'), 'concept:name': 'executed post function of component guardia_api', 'org:resource': 'guardia_api'}]}, {'attributes': {'concept:name': 97}, 'events': [{'timestamp': Timestamp('2021-01-12 17:18:00.720196+0000', tz='UTC'), 'concept:name': 'executed pre function of component auth_proxy', 'org:resource': 'auth_proxy'}, '..', {'timestamp': Timestamp('2021-01-12 17:18:12.520196+0000', tz='UTC'), 'concept:name': 'executed post function of component guardia_api', 'org:resource': 'guardia_api'}]}, {'attributes': {'concept:name': 92}, 'events': [{'timestamp': Timestamp('2021-01-12 17:18:00.722651+0000', tz='UTC'), 'concept:name': 'executed pre function of component auth_proxy', 'org:resource': 'auth_proxy'}, '..', {'timestamp': Timestamp('2021-01-12 17:18:04.622651+0000', tz='UTC'), 'concept:name': 'executed post function of component guardia_api', 'org:resource': 'guardia_api'}]}]\n"
      ]
     }
    ],
