adjust timestamp naming

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -14,7 +14,7 @@
     "Define a parser to extract information out of logs. \n",
     "The final log needs to be in a valid, transformable XES structure as defined like:\n",
     "  * case id   --> 'case:concept:name'\n",
-    "  * timestamp --> 'timestamp'\n",
+    "  * timestamp --> 'time:timestamp'\n",
     "  * activity  --> 'concept:name'\n",
     "  * resource  --> 'org:resource'"
    ]
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
     "                # configure writer to write standard csv file\n",
     "                writer = csv.writer(outcsv, delimiter=',', quoting=csv.QUOTE_MINIMAL, lineterminator='\\n')\n",
     "                # Case ID, Timestamp, Activity\n",
-    "                writer.writerow(['case:concept:name', 'timestamp', 'concept:name', 'org:resource'])\n",
+    "                writer.writerow(['case:concept:name', 'time:timestamp', 'concept:name', 'org:resource'])\n",
     "                for item in self._parsing_comp:\n",
     "                    # write item to outcsv\n",
     "                    writer.writerow([item[1].split(' ')[1], item[2], item[5], item[5].split(' ')[5]])\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
