perform process mining on both scenarios

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -66,6 +66,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Long Correlator Case"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {},
@@ -110,8 +117,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Long Correlator-Worker Case"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parser2 = LogParser('./log/long_correlator_worker_case.log')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['CASE', 'id 0', '2021-01-18 18:23:45.012778', 'count 1', 'DEBUG', 'executed pre function of component auth_proxy'], ['CASE', 'id 0', '2021-01-18 18:23:45.112778', 'count 2', 'DEBUG', 'executed pre function of component guardia_api'], ['CASE', 'id 0', '2021-01-18 18:23:45.212778', 'count 3', 'DEBUG', 'executed pre function of component email_service'], ['CASE', 'id 0', '2021-01-18 18:23:45.312778', 'count 4', 'DEBUG', 'executed pre function of component indicator_parser'], ['CASE', 'id 0', '2021-01-18 18:23:45.412778', 'count 5', 'DEBUG', 'executed post function of component worker']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "parser2.parse()\n",
+    "parser2.print(show_slice_list=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully wrote log info to csv!\n"
+     ]
+    }
+   ],
+   "source": [
+    "parser.write_to_csv('./out/long_correlator_worker_case.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
