--- a/parser.ipynb
+++ b/parser.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,11 @@
     "                for item in self._parsing_comp:\n",
     "                    # write item to outcsv\n",
     "                    writer.writerow([item[1].split(' ')[1], item[2], item[5], item[5].split(' ')[5]])\n",
-    "            print('Successfully wrote log info to csv!')"
+    "            print('Successfully wrote log info to csv!')\n",
+    "            \n",
+    "    def clean(self) -> None:\n",
+    "        self._parsing_comp = None\n",
+    "        self._file_name = None"
    ]
   },
   {
@@ -74,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -117,6 +121,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parser.clean()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -125,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +177,16 @@
     }
    ],
    "source": [
-    "parser.write_to_csv('./out/long_correlator_worker_case.csv')"
+    "parser2.write_to_csv('./out/long_correlator_worker_case.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parser2.clean()"
    ]
   },
   {
