Create second scenario

--- a/main.ipynb
+++ b/main.ipynb
@@ -22,21 +22,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "import random\n",
     "import datetime\n",
-    "\n",
     "import logging\n",
-    "from logging import config"
+    "from logging import config\n",
+    "from unittest.mock import MagicMock"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,11 @@
     "        self._last_seen = datetime.datetime.today()\n",
     "        self._counter = -1\n",
     "        self._log = logger\n",
+    "        self._lost = False\n",
     "        self.add_seconds(offset)\n",
+    "\n",
+    "    def loose(self):\n",
+    "        self._lost = True\n",
     "\n",
     "    @property\n",
     "    def id(self):\n",
@@ -150,6 +154,8 @@
     "\n",
     "    @property\n",
     "    def log(self):\n",
+    "        if self._lost:\n",
+    "            return unittest.mock.MagicMock()\n",
     "        return LoggerWrapper(self._log, {'case':str(self)})\n",
     "\n",
     "    def __str__(self):\n",
@@ -158,14 +164,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "id 42::2021-01-12 17:17:59.639498::count 0\nid 42::2021-01-12 17:19:39.639498::count 1\n"
+      "id 42::2021-01-18 18:47:24.631042::count 0\nid 42::2021-01-18 18:49:04.631042::count 1\n"
      ]
     }
    ],
@@ -178,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,14 +249,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "id 1::2021-01-12 17:18:03.775010::count 2\nid 1::2021-01-12 17:18:05.875010::count 3\n"
+      "id 1::2021-01-18 18:47:28.771297::count 2\nid 1::2021-01-18 18:47:28.871297::count 3\n"
      ]
     }
    ],
@@ -265,6 +271,13 @@
     "    \n",
     "    return 0.1\n",
     "\n",
+    "def simulate_dropout(likelihood=0.2):\n",
+    "    # decide if event should be dropped\n",
+    "    is_timeout = random.random()\n",
+    "\n",
+    "    return is_timeout < likelihood\n",
+    "\n",
+    "\n",
     "print(case)\n",
     "case.add_seconds(simulate_timeout(10, 0.6))\n",
     "print(case)"
@@ -272,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,30 +340,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "CASE::id 1::2021-01-12 17:18:00.021283::count 1::DEBUG::executed pre function of component auth_proxy\n",
-      "CASE::id 1::2021-01-12 17:18:00.121283::count 2::DEBUG::executed pre function of component guardia_api\n",
-      "CASE::id 1::2021-01-12 17:18:00.221283::count 3::DEBUG::executed pre function of component email_service\n",
-      "CASE::id 1::2021-01-12 17:18:00.321283::count 4::DEBUG::executed pre function of component indicator_parser\n",
-      "CASE::id 1::2021-01-12 17:18:00.421283::count 5::DEBUG::executed pre function of component worker\n",
-      "CASE::id 1::2021-01-12 17:18:00.521283::count 6::DEBUG::executed pre function of component workflow_engine\n",
-      "CASE::id 1::2021-01-12 17:18:00.621283::count 7::DEBUG::executed pre function of component analytics\n",
-      "CASE::id 1::2021-01-12 17:18:01.321283::count 8::DEBUG::executed pre function of component correlator\n",
-      "CASE::id 1::2021-01-12 17:18:01.421283::count 9::DEBUG::executed pre function of component notification_service\n",
-      "CASE::id 1::2021-01-12 17:18:01.521283::count 10::DEBUG::executed post function of component notification_service\n",
-      "CASE::id 1::2021-01-12 17:18:01.621283::count 11::DEBUG::executed post function of component correlator\n",
-      "CASE::id 1::2021-01-12 17:18:01.721283::count 12::DEBUG::executed post function of component analytics\n",
-      "CASE::id 1::2021-01-12 17:18:01.821283::count 13::DEBUG::executed post function of component workflow_engine\n",
-      "CASE::id 1::2021-01-12 17:18:01.921283::count 14::DEBUG::executed post function of component worker\n",
-      "CASE::id 1::2021-01-12 17:18:02.021283::count 15::DEBUG::executed post function of component indicator_parser\n",
-      "CASE::id 1::2021-01-12 17:18:02.121283::count 16::DEBUG::executed post function of component email_service\n",
-      "CASE::id 1::2021-01-12 17:18:02.221283::count 17::DEBUG::executed post function of component guardia_api\n"
+      "CASE::id 1::2021-01-18 18:47:25.101313::count 1::DEBUG::executed pre function of component auth_proxy\n",
+      "CASE::id 1::2021-01-18 18:47:25.201313::count 2::DEBUG::executed pre function of component guardia_api\n",
+      "CASE::id 1::2021-01-18 18:47:25.301313::count 3::DEBUG::executed pre function of component email_service\n",
+      "CASE::id 1::2021-01-18 18:47:25.401313::count 4::DEBUG::executed pre function of component indicator_parser\n",
+      "CASE::id 1::2021-01-18 18:47:25.501313::count 5::DEBUG::executed pre function of component worker\n",
+      "CASE::id 1::2021-01-18 18:47:25.601313::count 6::DEBUG::executed pre function of component workflow_engine\n",
+      "CASE::id 1::2021-01-18 18:47:25.701313::count 7::DEBUG::executed pre function of component analytics\n",
+      "CASE::id 1::2021-01-18 18:47:25.801313::count 8::DEBUG::executed pre function of component correlator\n",
+      "CASE::id 1::2021-01-18 18:47:25.901313::count 9::DEBUG::executed pre function of component notification_service\n",
+      "CASE::id 1::2021-01-18 18:47:27.201313::count 10::DEBUG::executed post function of component notification_service\n",
+      "CASE::id 1::2021-01-18 18:47:27.301313::count 11::DEBUG::executed post function of component correlator\n",
+      "CASE::id 1::2021-01-18 18:47:27.401313::count 12::DEBUG::executed post function of component analytics\n",
+      "CASE::id 1::2021-01-18 18:47:27.501313::count 13::DEBUG::executed post function of component workflow_engine\n",
+      "CASE::id 1::2021-01-18 18:47:27.601313::count 14::DEBUG::executed post function of component worker\n",
+      "CASE::id 1::2021-01-18 18:47:27.701313::count 15::DEBUG::executed post function of component indicator_parser\n",
+      "CASE::id 1::2021-01-18 18:47:27.801313::count 16::DEBUG::executed post function of component email_service\n",
+      "CASE::id 1::2021-01-18 18:47:27.901313::count 17::DEBUG::executed post function of component guardia_api\n"
      ]
     }
    ],
@@ -370,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 71,
    "metadata": {
     "tags": []
    },
@@ -409,16 +422,30 @@
    ]
   },
   {
+   "source": [
+    "## Simulating inconsistent and slow correlator, plus forgetting and inconsistent worker"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def long_post_and_dropput_function(case:CaseCapsule, logger: logging.Logger, name):\n",
+    "    logger.debug('executing post function')\n",
+    "    if (simulate_dropout()):\n",
+    "        case.loose()\n",
+    "    case.add_seconds(simulate_timeout(5, 0.3))\n",
+    "    case.log.debug(f'executed post function of component {name}')\n",
+    "\n",
     "notification_service = Component(\"notification_service\", nice_weather_pre_function, nice_weather_post_function, debugLogger)\n",
     "correlator = Component(\"correlator\", long_pre_function, long_post_function, debugLogger, notification_service)\n",
     "analytics = Component(\"analytics\", nice_weather_pre_function, nice_weather_post_function, debugLogger, correlator)\n",
     "workflow_engine = Component(\"workflow_engine\", nice_weather_pre_function, nice_weather_post_function, debugLogger, analytics)\n",
-    "worker = Component(\"worker\", long_pre_function, nice_weather_post_function, debugLogger, workflow_engine)\n",
+    "worker = Component(\"worker\", long_post_and_dropput_function, nice_weather_post_function, debugLogger, workflow_engine)\n",
     "indicator_parser = Component(\"indicator_parser\", nice_weather_pre_function, nice_weather_post_function, debugLogger, worker)\n",
     "email_service = Component(\"email_service\", nice_weather_pre_function, nice_weather_post_function, debugLogger, indicator_parser)\n",
     "guardia_api = Component(\"guardia_api\", nice_weather_pre_function, nice_weather_post_function, debugLogger, email_service)\n",
@@ -427,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
