finalize project - add doc strings

--- a/main.ipynb
+++ b/main.ipynb
@@ -44,6 +44,8 @@
     "debug_format = \"DEBUG::%(component)s::%(asctime)s::%(levelname)s::%(message)s\"\n",
     "debug_date_format = \"%Y-%m-%d %H:%M:%S\"\n",
     "\n",
+    "# define logging functionality\n",
+    "# a logger for debugging and for the cases is created\n",
     "def get_handlers(name, level, console):\n",
     "    handler_dict = {\n",
     "        f'{name}_file': {\n",
@@ -112,6 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# test logger \n",
     "debugLogger.info(\"test debug logger\", extra={'component':\"Comp1\"})\n",
     "caseLogger.info(\"test case logger\", extra={'case':\"Case1\"})"
    ]
@@ -122,6 +125,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# define logic to create cases\n",
+    "# a case knows about id, timestamp, counter and a time offset\n",
     "class CaseCapsule:\n",
     "    def __init__(self, id: str, offset=0, logger: logging.Logger=caseLogger):\n",
     "        # TODO\n",
@@ -176,6 +181,7 @@
     }
    ],
    "source": [
+    "# test CaseCapsule\n",
     "case = CaseCapsule(\"42\")\n",
     "print(case)\n",
     "case.add_seconds(100)\n",
@@ -188,6 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# test logger wrapper, to add case or component information in one statement\n",
     "newLogger = LoggerWrapper(caseLogger, {'case': 'hello_world'})\n",
     "\n",
     "newLogger.debug('test log')"
@@ -199,6 +206,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# define component pre and post function - these simulate the in and output time (delays) of a case component\n",
+    "# some can also have a sub component which can be enabled\n",
     "class Component:\n",
     "    def __init__(self, name, pre_sub_function, post_sub_function, debug_logger=debugLogger, sub_component=None):\n",
     "        self._name = name\n",
@@ -230,6 +239,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# test pre and post functionality with some time delay\n",
     "def test_pre_fun(case:CaseCapsule, logger: logging.Logger, name):\n",
     "    logger.debug('some demo pre function')\n",
     "    case.add_seconds(2)\n",
@@ -261,6 +271,7 @@
     }
    ],
    "source": [
+    "# define time delay\n",
     "def simulate_timeout(ceil=10, likelihood=0.9):\n",
     "    # decide if timeout should be added\n",
     "    is_timeout = random.random()\n",
