--- a/parser.ipynb
+++ b/parser.ipynb
@@ -21,20 +21,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import csv"
+    "import csv\n",
+    "import pandas as pd\n",
+    "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# define parser for log files\n",
     "class LogParser:\n",
     "    def __init__(self, file_name):\n",
     "        self._file_name = file_name\n",
@@ -57,13 +60,15 @@
     "            with open(out_file_name, 'w') as outcsv:\n",
     "                # configure writer to write standard csv file\n",
     "                writer = csv.writer(outcsv, delimiter=',', quoting=csv.QUOTE_MINIMAL, lineterminator='\\n')\n",
+    "                # sort timestamps\n",
+    "                sorted(self._parsing_comp)\n",
     "                # Case ID, Timestamp, Activity\n",
     "                writer.writerow(['case:concept:name', 'time:timestamp', 'concept:name', 'org:resource'])\n",
     "                for item in self._parsing_comp:\n",
     "                    # write item to outcsv\n",
     "                    writer.writerow([item[1].split(' ')[1], item[2], item[5], item[5].split(' ')[5]])\n",
     "            print('Successfully wrote log info to csv!')\n",
-    "            \n",
+    "\n",
     "    def clean(self) -> None:\n",
     "        self._parsing_comp = None\n",
     "        self._file_name = None"
@@ -78,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
